[workspace]
resolver = "2"

members = ["application", "bootloader"]

[profile.dev]
debug = 2
debug-assertions = true
incremental = false
opt-level = 'z'
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2 # needed for probers log locations
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 'z'
overflow-checks = false
