[package]
edition = "2021"
name = "DCC-RP2040-rs"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-sync = { version = "0.6.2" }
embassy-executor = { version = "0.7.0", features = ["task-arena-size-16384", "arch-cortex-m", "executor-thread", "arch-cortex-m", "executor-thread"] }
embassy-time = { version = "0.4.0", features = [] }
embassy-rp = { version = "0.4.0", features = ["time-driver", "critical-section-impl", "rp2040"] }
#embassy-boot-rp = { version = "0.4.0", features = [] }
#embassy-embedded-hal = { version = "0.3.0" }

defmt = { version = "0.3", optional = true }
defmt-rtt = { version = "0.4", optional = true }

panic-probe = { version = "0.3", optional = true }
panic-reset = { version = "0.1.1"}
embedded-hal = { version = "1.0.0" }

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
#embedded-storage = "0.3.1"

task-watchdog = { version = "0.1.2", features = ["embassy-rp"] }
fixed = "1.29.0"
fixed-macro = "1.2.0"

[features]
default = [
    "defmt-03",
    "probe-rs"
]

defmt-03 = [
    "dep:defmt",
    "dep:defmt-rtt",
    "embassy-executor/defmt",
    "embassy-time/defmt",
    "embassy-time/defmt-timestamp-uptime",
    "embassy-sync/defmt",
    "embassy-rp/defmt",
#    "embassy-boot-rp/defmt",
    "embedded-hal/defmt-03",
    "panic-probe/print-defmt",
    "task-watchdog/defmt-embassy-rp"
]

probe-rs = [
    "dep:panic-probe"
]

skip-include = []
